# German_NER_XLM-R_CRF

./: .gitignore  LICENSE  README.md  pyproject.toml
eval/: results
src/: main.ipynb  preprocessing.py
